--- a/res/admin/package.json
+++ b/res/admin/package.json
@@ -6,7 +6,10 @@
   "license": "MIT",
   "devDependencies": {
     "R2": "^1.4.3",
+    "atob": "^2.1.0",
     "cli": "^1.0.0",
+    "cryptiles": "^4.1.2",
+    "debug": "^2.6.9",
     "grunt": "^0.4.5",
     "grunt-bootlint": "^0.9.1",
     "grunt-contrib-clean": "^0.6.0",
@@ -19,7 +22,13 @@
     "grunt-cssjanus": "^0.2.4",
     "grunt-image": "^1.0.5",
     "grunt-includes": "^0.4.5",
+    "hawk": "^3.1.3",
+    "hoek": "^4.2.1",
+    "lodash": "^4.17.1",
+    "mime": "^1.4.1",
+    "minimatch": "^3.0.2",
     "randomatic": "^3.0.0",
+    "request": "^2.68.0",
     "tough-cookie": "^2.3.3"
   }
 }
